ProjectExplorer: Consider more compiler flags when collecting includes

The -nostdinc and -nostdinc++ options must not get filtered out when
constructing the compiler command line for collecting include paths.

Fixes: QTCREATORBUG-22760
Change-Id: I6bb10024f39869d5ef546968eb13d07d39c985ae
Reviewed-by: hjk <hjk@qt.io>